--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-    "name": "nlw04",
+    "name": "nlw04-api",
     "version": "1.0.0",
     "main": "index.js",
     "license": "MIT",
     "scripts": {
         "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-        "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+        "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
+        "test": "NODE_ENV=test jest",
+        "posttest": "rm ./src/database/database.test.sqlite"
     },
     "dependencies": {
+        "curl": "^0.1.4",
+        "entities": "^2.2.0",
         "express": "^4.17.1",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.0.2",
         "typeorm": "^0.2.31",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "zsh": "^0.0.1"
     },
     "devDependencies": {
+        "@types/entities": "^1.1.1",
         "@types/express": "^4.17.11",
+        "@types/jest": "^26.0.20",
+        "@types/supertest": "^2.0.10",
         "@types/uuid": "^8.3.0",
+        "jest": "^26.6.3",
+        "supertest": "^6.1.3",
+        "ts-jest": "^26.5.2",
         "ts-node-dev": "^1.1.1",
         "typescript": "^4.1.5"
     }
